[tool.poetry]
name = "poggers-listener"
version = "0.1.0"
description = ""
authors = ["JasonEide1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
twitch-listener = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
